--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
                                 020 77 30 54 98</p>
                             <p
                                 style="margin: 0; padding: 3px 0; font-size: 14px; font-family: 'Montserrat', sans-serif;">
-                                <a style="color: gray;"
-                                    href="mailto:ariana.scalzo@eatatsicily.com">ariana.scalzo@eatatsicily.com</a>
+                                <a style="color: gray;" href="mailto:ariana@eatatsicily.com">ariana@eatatsicily.com</a>
                             </p>
                             <p
                                 style="margin: 0; padding: 3px 0; font-size: 14px; font-family: 'Montserrat', sans-serif;">
